k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-backend
  labels:
    app: mern-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mern-backend
  template:
    metadata:
      labels:
        app: mern-backend
    spec:
      containers:
      - name: backend
        image: kundgar19/mern-backend:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 15
