k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mern-backend
spec:
  type: ClusterIP
  selector:
    app: mern-backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
