k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mern-frontend
spec:
  type: ClusterIP
  selector:
    app: mern-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
